Backend: Updated-Added Endpoints
